Fix: missed comma in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular-uuid-typings",
   "version": "1.0.0",
   "description": "An angular-uuid (https://github.com/munkychop/angular-uuid) typescript declaration file.",
-  "main": "index.d.ts"
+  "main": "index.d.ts",
   "files": [
     "index.d.ts"
   ],
